--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ urllib3==2.3.0
 MarkupSafe==3.0.2
 Jinja2==3.1.5
 Flask-SocketIO==5.5.1
-python-dotenv
-requests
+python-dotenv==1.0.1
+requests==2.32.3
